--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Yeah약</string>
+    <string name="app_name">Yeah약 하자</string>
+    <string name="but_start">Yeah약 시작</string>
+    <string name="radio_date">날zzㅏ 설정(캘린더뷰 사용)</string>
+    <string name="radio_time">시GAK 설정</string>
+    <string name="but_done">Yeah약 완료</string>>
 </resources>
